--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,16 @@
 
 buildscript {
     ext.kotlin_version = '1.1.51'
+    ext.android_plugin_version = '2.2.0-alpha4'
+    ext.lifecycle_version = '1.1.1'
+    ext.retrofit_version = '2.5.0'
+    ext.okhttp_version = "3.12.1"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
